@@ -1,36 +1,29 @@
 package it.unimol.vino.services;
 
 import it.unimol.vino.dto.ContributionDTO;
-import it.unimol.vino.dto.GrapeTypeDTO;
 import it.unimol.vino.dto.UserDTO;
-import it.unimol.vino.dto.mappers.ProviderDTOMapper;
-import it.unimol.vino.exceptions.ContributionNotFoundException;
-import it.unimol.vino.exceptions.ImageNotLoadedException;
-
-import it.unimol.vino.exceptions.UserNotFoundException;
+import it.unimol.vino.dto.mappers.FullContributionDTOMapper;
+import it.unimol.vino.dto.mappers.PartialContributionDTOMapper;
+import it.unimol.vino.exceptions.*;
 import it.unimol.vino.models.entity.Contribution;
 import it.unimol.vino.models.entity.GrapeType;
-import it.unimol.vino.models.entity.User;
-import it.unimol.vino.repository.ContributionRepository;
-import it.unimol.vino.repository.UserRepository;
-import jakarta.validation.Valid;
-import org.springframework.security.core.context.SecurityContextHolder;
-import it.unimol.vino.exceptions.GrapeTypeNotFoundException;
-import it.unimol.vino.exceptions.ProviderNotFoundException;
 import it.unimol.vino.models.entity.Provider;
+import it.unimol.vino.models.entity.User;
 import it.unimol.vino.models.request.RegisterContributionRequest;
+import it.unimol.vino.repository.ContributionRepository;
 import it.unimol.vino.repository.GrapeTypeRepository;
 import it.unimol.vino.repository.ProviderRepository;
+import it.unimol.vino.repository.UserRepository;
+import jakarta.validation.Valid;
 import lombok.AllArgsConstructor;
-
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.validation.annotation.Validated;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.file.Files;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 @Service
 @Validated
@@ -41,47 +34,21 @@ public class ContributionService {
     private final UserRepository userRepository;
     private final ProviderRepository provider;
     private final GrapeTypeRepository grapeType;
+    private final PartialContributionDTOMapper partialContributionDTOMapper;
+    private final FullContributionDTOMapper fullContributionDTOMapper;
 
-    private final ProviderDTOMapper providerDTOMapper;
 
     public List<ContributionDTO> getAll() {
-        return this.contribution.findAll().stream().map(
-                contribution -> {
-                    try {
-                        return ContributionDTO.builder()
-                                .id(contribution.getId())
-                                .quantity(contribution.getQuantity())
-                                .associatedGrapeType(GrapeTypeDTO.getFullGrapeTypeDTO(contribution.getAssociatedGrapeType()))
-                                .provider(providerDTOMapper.apply(contribution.getProvider()))
-                                .image(Files.readAllBytes(new File(contribution.getImage()).toPath()))
-                                .build();
-                    } catch (IOException e) {
-                        throw new ImageNotLoadedException(e.getMessage());
-                    }
-                }
-        ).collect(Collectors.toList());
+        return this.contribution.findAll()
+                .stream()
+                .map(partialContributionDTOMapper)
+                .toList();
     }
 
 
     public ContributionDTO get(Long id) {
         return this.contribution.findById(id)
-                .map(specificContribution -> {
-                    try {
-                        return ContributionDTO.builder()
-                                .id(specificContribution.getId())
-                                .origin(specificContribution.getOrigin())
-                                .country(specificContribution.getCountry())
-                                .description(specificContribution.getDescription())
-                                .quantity(specificContribution.getQuantity())
-                                .sugarDegree(specificContribution.getSugarDegree())
-                                .image(Files.readAllBytes(new File(specificContribution.getImage()).toPath()))
-                                .associatedGrapeType(GrapeTypeDTO.getFullGrapeTypeDTO(specificContribution.getAssociatedGrapeType()))
-                                .provider(providerDTOMapper.apply(specificContribution.getProvider()))
-                                .build();
-                    } catch (IOException e) {
-                        throw new ImageNotLoadedException("Errore nel caricamento dell'immagine\n" + e.getMessage());
-                    }
-                })
+                .map(fullContributionDTOMapper)
                 .orElseThrow(() -> new ContributionNotFoundException("Il conferimento con id " + id + " non esiste"));
     }
 
@@ -111,13 +78,10 @@ public class ContributionService {
                 () -> new GrapeTypeNotFoundException("Il tipo d'uva con ID " + request.getGrapeTypeId() + " non è stato trovato")
         );
 
-        String IMAGE_FOLDER = "/src/main/resources/static/images/";
-        StringBuilder path = new StringBuilder(System.getProperty("user.dir")).append(IMAGE_FOLDER).append(request.getImage().getOriginalFilename());
 
         var contribution = Contribution.builder()
                 .origin(request.getOrigin())
                 .country(request.getCountry())
-                .image(path.toString())
                 .description(request.getDescription())
                 .sugarDegree(Double.parseDouble(request.getSugarDegree()))
                 .quantity(Double.parseDouble(request.getQuantity()))
@@ -128,14 +92,22 @@ public class ContributionService {
                 .build();
 
         contribution.setSubmitter(user);
-        try {
-            request.getImage()
-                    .transferTo(new File(path.toString()));
-        } catch (IOException e) {
-            throw new ImageNotLoadedException("Errore nel caricamento dell'immagine");
+
+        if (Objects.nonNull(request.getImage())) {
+            String IMAGE_FOLDER = "/src/main/resources/static/images/";
+            StringBuilder path = new StringBuilder(System.getProperty("user.dir")).append(IMAGE_FOLDER).append(request.getImage().getOriginalFilename());
+
+            File imagesFolder = new File(System.getProperty("user.dir") + IMAGE_FOLDER);
+            if (!imagesFolder.exists()) imagesFolder.mkdirs();
+
+            try {
+                contribution.setImage(path.toString());
+                request.getImage().transferTo(new File(path.toString()));
+            } catch (IOException e) {
+                throw new ImageNotLoadedException("Errore nel caricamento dell'immagine");
+            }
         }
         this.contribution.save(contribution);
         return "Il conferimento è stato registrato con l'id " + contribution.getId();
     }
-
 }
